--- a/ilove-pdf-dev/public/seo/about.html
+++ b/ilove-pdf-dev/public/seo/about.html
@@ -6,6 +6,7 @@
   <title>About ilovpdf — Privacy-First Image and PDF Editor</title>
   <meta name="description" content="Learn how ilovpdf delivers a privacy-first, client-side image and PDF editor for professionals, teams, and creators.">
   <link rel="canonical" href="https://ilovpdf.in/about">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
