--- a/ilove-pdf-dev/public/seo/background-remover.html
+++ b/ilove-pdf-dev/public/seo/background-remover.html
@@ -6,6 +6,7 @@
   <title>Background Remover — AI‑Powered Client‑Side Tool</title>
   <meta name="description" content="Remove image backgrounds using client‑side AI. Export clean cutouts without uploading your files.">
   <link rel="canonical" href="https://ilovpdf.in/tools/background-remover">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>Background Remover</h1>
