--- a/ilove-pdf-dev/public/seo/bulk.html
+++ b/ilove-pdf-dev/public/seo/bulk.html
@@ -6,6 +6,7 @@
   <title>Bulk Image Processor — Resize, Compress, and Convert Batches</title>
   <meta name="description" content="Process up to 100 images at once. Resize, compress, or convert entire folders of photos directly in your browser.">
   <link rel="canonical" href="https://ilovpdf.in/tools/bulk">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
