--- a/ilove-pdf-dev/public/seo/compress.html
+++ b/ilove-pdf-dev/public/seo/compress.html
@@ -6,6 +6,7 @@
   <title>Image Compressor — Reduce Image Size Without Quality Loss</title>
   <meta name="description" content="Compress images intelligently to shrink file size while preserving quality. Client-side compression keeps your files private.">
   <link rel="canonical" href="https://ilovpdf.in/tools/compress">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
