--- a/ilove-pdf-dev/public/seo/contact.html
+++ b/ilove-pdf-dev/public/seo/contact.html
@@ -6,6 +6,7 @@
   <title>Contact ilovpdf — Support and Feedback</title>
   <meta name="description" content="Get in touch with ilovpdf for support, feature requests, and feedback about the image and PDF editor.">
   <link rel="canonical" href="https://ilovpdf.in/contact">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
