--- a/ilove-pdf-dev/public/seo/converter.html
+++ b/ilove-pdf-dev/public/seo/converter.html
@@ -6,6 +6,7 @@
   <title>Image Format Converter — JPG, PNG, and WebP</title>
   <meta name="description" content="Convert images between JPG, PNG, and WebP formats directly in your browser. Fast, client-side conversion with no uploads.">
   <link rel="canonical" href="https://ilovpdf.in/tools/converter">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
