--- a/ilove-pdf-dev/public/seo/drawing.html
+++ b/ilove-pdf-dev/public/seo/drawing.html
@@ -6,6 +6,7 @@
   <title>Drawing Tool — Annotate and Sketch on Images Online</title>
   <meta name="description" content="Draw, highlight, and annotate directly on images in your browser. Use brush, shapes, and eraser tools for quick markups.">
   <link rel="canonical" href="https://ilovpdf.in/tools/drawing">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
