--- a/ilove-pdf-dev/public/seo/edit.html
+++ b/ilove-pdf-dev/public/seo/edit.html
@@ -6,6 +6,7 @@
   <title>Image Editor — Crop, Rotate, and Adjust Images Online</title>
   <meta name="description" content="Edit images in your browser with crop, rotate, and fine-tune adjustments. All edits are processed client-side for full privacy.">
   <link rel="canonical" href="https://ilovpdf.in/tools/edit">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
