--- a/ilove-pdf-dev/public/seo/filters.html
+++ b/ilove-pdf-dev/public/seo/filters.html
@@ -6,6 +6,7 @@
   <title>Image Filters — Apply Aesthetic Looks to Photos Online</title>
   <meta name="description" content="Apply stackable filters like vintage, cinematic, and matte to your photos. All effects are rendered client-side in your browser.">
   <link rel="canonical" href="https://ilovpdf.in/tools/filters">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
