--- a/ilove-pdf-dev/public/seo/pdf-editor.html
+++ b/ilove-pdf-dev/public/seo/pdf-editor.html
@@ -6,6 +6,7 @@
   <title>Native PDF Text Editor — Edit PDF Text Securely Online</title>
   <meta name="description" content="Edit text directly inside your PDF without conversion. Client‑side native editing with precise layout preservation, privacy‑first, and fast export.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf-editor">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
