--- a/ilove-pdf-dev/public/seo/pdf-resizer.html
+++ b/ilove-pdf-dev/public/seo/pdf-resizer.html
@@ -6,6 +6,7 @@
   <title>Reduce PDF Size — Compress PDF Online, Client‑Side</title>
   <meta name="description" content="Compress PDF size with structural optimization. Client‑side object stream packing, metadata pruning, and page cleanup.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf-resizer">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>Compress PDF Size</h1>
