--- a/ilove-pdf-dev/public/seo/pdf-splitter.html
+++ b/ilove-pdf-dev/public/seo/pdf-splitter.html
@@ -6,6 +6,7 @@
   <title>Split PDF Pages — Extract, Save, and Download</title>
   <meta name="description" content="Split PDFs into individual pages or ranges. Export as separate files or a ZIP — all processed locally.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf-splitter">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>Split PDF</h1>
