--- a/ilove-pdf-dev/public/seo/pdf-to-ppt.html
+++ b/ilove-pdf-dev/public/seo/pdf-to-ppt.html
@@ -6,6 +6,7 @@
   <title>PDF to PowerPoint — Convert PDF Pages to Slides</title>
   <meta name="description" content="Convert PDF pages into PowerPoint slides with thumbnails and structure preserved. Client‑side processing.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf-to-ppt">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>PDF to PowerPoint</h1>
