--- a/ilove-pdf-dev/public/seo/pdf-to-word.html
+++ b/ilove-pdf-dev/public/seo/pdf-to-word.html
@@ -6,6 +6,7 @@
   <title>PDF to Word — High‑Fidelity Client‑Side Conversion</title>
   <meta name="description" content="Convert PDFs to editable Word documents with structural analysis of blocks and alignment. Privacy‑first client‑side processing.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf-to-word">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>PDF to Word</h1>
