--- a/ilove-pdf-dev/public/seo/pdf-watermark.html
+++ b/ilove-pdf-dev/public/seo/pdf-watermark.html
@@ -6,6 +6,7 @@
   <title>Add Watermark to PDF — Text Overlay, Client‑Side</title>
   <meta name="description" content="Add styled text watermarks to PDFs entirely in your browser. Choose position, color, opacity, and scale.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf-watermark">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>Add PDF Watermark</h1>
