--- a/ilove-pdf-dev/public/seo/pdf.html
+++ b/ilove-pdf-dev/public/seo/pdf.html
@@ -6,6 +6,7 @@
   <title>Image to PDF Converter — Create High-Quality PDFs Online</title>
   <meta name="description" content="Convert images to high-quality PDF documents entirely in your browser. Control page order, margins, and layout without uploading files.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
