--- a/ilove-pdf-dev/public/seo/privacy.html
+++ b/ilove-pdf-dev/public/seo/privacy.html
@@ -6,6 +6,7 @@
   <title>Privacy Policy — ilovpdf Local-First Editor</title>
   <meta name="description" content="Read how ilovpdf handles your data. Most processing runs locally in your browser and documents are not uploaded to remote servers.">
   <link rel="canonical" href="https://ilovpdf.in/privacy">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
