--- a/ilove-pdf-dev/public/seo/resize.html
+++ b/ilove-pdf-dev/public/seo/resize.html
@@ -6,6 +6,7 @@
   <title>Image Resizer — Resize Images by Dimensions or Exact KB Size</title>
   <meta name="description" content="Resize images by width, height, or exact file size in KB. All processing happens client-side in your browser for privacy and speed.">
   <link rel="canonical" href="https://ilovpdf.in/tools/resize">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
