--- a/ilove-pdf-dev/public/seo/social.html
+++ b/ilove-pdf-dev/public/seo/social.html
@@ -6,6 +6,7 @@
   <title>Social Media Image Resizer — IG, YouTube, LinkedIn</title>
   <meta name="description" content="Resize and crop images to exact sizes for Instagram, YouTube, LinkedIn, and more using preset social templates.">
   <link rel="canonical" href="https://ilovpdf.in/tools/social">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
