--- a/ilove-pdf-dev/public/seo/terms.html
+++ b/ilove-pdf-dev/public/seo/terms.html
@@ -6,6 +6,7 @@
   <title>Terms of Use — ilovpdf Online Editor</title>
   <meta name="description" content="Review the terms of use for the ilovpdf image and PDF editing tools, including acceptable usage and limitations.">
   <link rel="canonical" href="https://ilovpdf.in/terms">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
