--- a/ilove-pdf-dev/public/seo/text-to-pdf.html
+++ b/ilove-pdf-dev/public/seo/text-to-pdf.html
@@ -6,6 +6,7 @@
   <title>Text to PDF — Generate Documents Online</title>
   <meta name="description" content="Create clean PDFs from text with layout controls. Client‑side generation for fast, private document creation.">
   <link rel="canonical" href="https://ilovpdf.in/tools/text-to-pdf">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>Text to PDF</h1>
