--- a/ilove-pdf-dev/public/seo/text-to-ppt.html
+++ b/ilove-pdf-dev/public/seo/text-to-ppt.html
@@ -6,6 +6,7 @@
   <title>Text to PowerPoint — Create Slides from Text</title>
   <meta name="description" content="Turn text into structured slides with headings and layout blocks. Client‑side export to PPTX.">
   <link rel="canonical" href="https://ilovpdf.in/tools/text-to-ppt">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>Text to PowerPoint</h1>
