--- a/ilove-pdf-dev/public/seo/text.html
+++ b/ilove-pdf-dev/public/seo/text.html
@@ -6,6 +6,7 @@
   <title>Add Text to Images — Online Text Overlay Tool</title>
   <meta name="description" content="Add styled text to images for posters, banners, and social media graphics. All rendering runs client-side in your browser.">
   <link rel="canonical" href="https://ilovpdf.in/tools/text">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
