--- a/ilove-pdf-dev/public/seo/watermark.html
+++ b/ilove-pdf-dev/public/seo/watermark.html
@@ -6,6 +6,7 @@
   <title>Image Watermark Tool — Protect Photos Online</title>
   <meta name="description" content="Add text or logo watermarks to images directly in your browser. Protect photos before sharing them online.">
   <link rel="canonical" href="https://ilovpdf.in/tools/watermark">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <header>
