--- a/ilove-pdf-dev/bulk.html
+++ b/ilove-pdf-dev/bulk.html
@@ -25,6 +25,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-[#060608] text-slate-200 antialiased selection:bg-blue-500/30">
