--- a/ilove-pdf-dev/image-resize.html
+++ b/ilove-pdf-dev/image-resize.html
@@ -28,6 +28,7 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-[#060608] text-slate-200 antialiased selection:bg-blue-500/30">
