--- a/ilove-pdf-dev/image-to-pdf.html
+++ b/ilove-pdf-dev/image-to-pdf.html
@@ -25,6 +25,7 @@
   <!-- Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body class="bg-slate-900 text-slate-200 antialiased selection:bg-purple-500/30">
     
