--- a/ilove-pdf-dev/public/404.html
+++ b/ilove-pdf-dev/public/404.html
@@ -55,6 +55,7 @@
       box-shadow: 0 15px 30px -10px rgba(85, 81, 255, 0.6);
     }
   </style>
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>404 – Page Not Found</h1>
