--- a/ilove-pdf-dev/public/seo/pdf-merge.html
+++ b/ilove-pdf-dev/public/seo/pdf-merge.html
@@ -6,6 +6,7 @@
   <title>Merge PDF Files — Combine Documents Securely Online</title>
   <meta name="description" content="Combine multiple PDFs into one, reorder pages, and export — all client‑side for privacy.">
   <link rel="canonical" href="https://ilovpdf.in/tools/pdf-merge">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <h1>Merge PDF Files</h1>
