feat: Add OpenGraph and Twitter meta tags and social share image

--- a/ilove-pdf-dev/bulk.html
+++ b/ilove-pdf-dev/bulk.html
@@ -8,6 +8,22 @@
     <meta name="description"
         content="Process up to 100 images locally in your browser. Resize and compress in bulk with ZIP export.">
     <link rel="canonical" href="https://ilovpdf.in/bulk.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bulk Image Processing — Batch Resize and Compress | iLovPDF">
+    <meta property="og:description"
+        content="Process up to 100 images locally in your browser. Resize and compress in bulk with ZIP export.">
+    <meta property="og:url" content="https://ilovpdf.in/bulk.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bulk Image Processing — Batch Resize and Compress | iLovPDF">
+    <meta name="twitter:description"
+        content="Process up to 100 images locally in your browser. Resize and compress in bulk with ZIP export.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,7 +41,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-[#060608] text-slate-200 antialiased selection:bg-blue-500/30">
