--- a/ilove-pdf-dev/drawing.html
+++ b/ilove-pdf-dev/drawing.html
@@ -8,6 +8,22 @@
     <meta name="description"
         content="Draw and annotate on images locally in your browser. Privacy-first editing with fast export.">
     <link rel="canonical" href="https://ilovpdf.in/drawing.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Drawing Tool — Annotate Images Online | iLovPDF">
+    <meta property="og:description"
+        content="Draw and annotate on images locally in your browser. Privacy-first editing with fast export.">
+    <meta property="og:url" content="https://ilovpdf.in/drawing.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Drawing Tool — Annotate Images Online | iLovPDF">
+    <meta name="twitter:description"
+        content="Draw and annotate on images locally in your browser. Privacy-first editing with fast export.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,7 +41,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-slate-900 text-slate-200 antialiased selection:bg-purple-500/30">
