--- a/ilove-pdf-dev/image-resize.html
+++ b/ilove-pdf-dev/image-resize.html
@@ -10,6 +10,22 @@
     <meta name="keywords"
         content="image resizer, resize image, change image size, image dimensions, reduce image size, resize photo, local image resizer, privacy-first image tools">
     <link rel="canonical" href="https://ilovpdf.in/image-resize.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Image Resizer - Resize Photos by Dimensions or Size | iLovPDF">
+    <meta property="og:description"
+        content="Resize images by custom dimensions, percentage, or target file size directly in your browser. 100% private, client-side processing with no file uploads.">
+    <meta property="og:url" content="https://ilovpdf.in/image-resize.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Image Resizer - Resize Photos by Dimensions or Size | iLovPDF">
+    <meta name="twitter:description"
+        content="Resize images by custom dimensions, percentage, or target file size directly in your browser. 100% private, client-side processing with no file uploads.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,7 +44,7 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-[#060608] text-slate-200 antialiased selection:bg-blue-500/30">
