--- a/ilove-pdf-dev/pdf-split.html
+++ b/ilove-pdf-dev/pdf-split.html
@@ -10,6 +10,22 @@
   <meta name="keywords"
     content="split pdf, extract pdf pages, cut pdf, separate pdf pages, online pdf splitter, local pdf split, private pdf tools">
   <link rel="canonical" href="https://ilovpdf.in/pdf-split.html">
+
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Split PDF - Extract Pages and Page Ranges Locally | iLovPDF">
+  <meta property="og:description"
+    content="Split your PDF files into separate documents by pages or ranges instantly. 100% private, client-side processing. Your files never leave your device.">
+  <meta property="og:url" content="https://ilovpdf.in/pdf-split.html">
+  <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+  <meta property="og:site_name" content="iLovPDF">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Split PDF - Extract Pages and Page Ranges Locally | iLovPDF">
+  <meta name="twitter:description"
+    content="Split your PDF files into separate documents by pages or ranges instantly. 100% private, client-side processing. Your files never leave your device.">
+  <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/common.css">
   <script src="https://cdn.tailwindcss.com"></script>
