--- a/ilove-pdf-dev/pdf-watermark.html
+++ b/ilove-pdf-dev/pdf-watermark.html
@@ -10,6 +10,22 @@
     <meta name="keywords"
         content="pdf watermark, add watermark to pdf, protect pdf, online pdf watermark, local pdf tools, private pdf watermarking">
     <link rel="canonical" href="https://ilovpdf.in/pdf-watermark.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PDF Watermark - Add Text or Image Watermarks to PDFs Locally | iLovPDF">
+    <meta property="og:description"
+        content="Protect your PDF documents by adding text or image watermarks instantly. 100% private, client-side processing. Customize opacity, position, and rotation without uploading files.">
+    <meta property="og:url" content="https://ilovpdf.in/pdf-watermark.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PDF Watermark - Add Text or Image Watermarks to PDFs Locally | iLovPDF">
+    <meta name="twitter:description"
+        content="Protect your PDF documents by adding text or image watermarks instantly. 100% private, client-side processing. Customize opacity, position, and rotation without uploading files.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,7 +44,7 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-slate-900 text-slate-200 antialiased selection:bg-purple-500/30">
