--- a/ilove-pdf-dev/index.html
+++ b/ilove-pdf-dev/index.html
@@ -21,6 +21,24 @@
     content="resize image in kb, compress pdf online, remove background ai, pdf to ppt, merge pdf, image to pdf, online photo editor free, convert pdf to word docx, split pdf pages, structural pdf editor, text to pdf converter, image to pptx">
   <link rel="canonical" href="https://ilovpdf.in/" />
 
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="iLovPDF – Free Online PDF & Image Tools">
+  <meta property="og:description"
+    content="Edit, compress, resize and manage PDFs and images instantly. Fast, private and runs fully in your browser.">
+  <meta property="og:url" content="https://www.ilovpdf.in/">
+  <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="iLovPDF">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="iLovPDF – Free Online PDF & Image Tools">
+  <meta name="twitter:description"
+    content="Edit, compress, resize and manage PDFs and images instantly. Fast, private and runs fully in your browser.">
+  <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
+
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
     {
