--- a/ilove-pdf-dev/pdf-editor.html
+++ b/ilove-pdf-dev/pdf-editor.html
@@ -7,6 +7,23 @@
     <title>PDF Editor - Edit PDF Text Locally | iLovPDF</title>
     <meta name="description"
         content="Free online PDF editor. Edit text in your PDF files directly in the browser. No file uploads, 100% private and secure.">
+    <link rel="canonical" href="https://ilovpdf.in/pdf-editor.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PDF Editor - Edit PDF Text Locally | iLovPDF">
+    <meta property="og:description"
+        content="Free online PDF editor. Edit text in your PDF files directly in the browser. No file uploads, 100% private and secure.">
+    <meta property="og:url" content="https://ilovpdf.in/pdf-editor.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PDF Editor - Edit PDF Text Locally | iLovPDF">
+    <meta name="twitter:description"
+        content="Free online PDF editor. Edit text in your PDF files directly in the browser. No file uploads, 100% private and secure.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,7 +42,7 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-slate-900 text-slate-200 antialiased selection:bg-purple-500/30">
