--- a/ilove-pdf-dev/pdf-to-ppt.html
+++ b/ilove-pdf-dev/pdf-to-ppt.html
@@ -10,6 +10,22 @@
   <meta name="keywords"
     content="pdf to ppt, convert pdf to powerpoint, pdf to pptx, online pdf to ppt, local pdf converter, private pdf tools">
   <link rel="canonical" href="https://ilovpdf.in/pdf-to-ppt.html">
+
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="PDF to PPT - Convert PDF to PowerPoint Slides Locally | iLovPDF">
+  <meta property="og:description"
+    content="Convert PDF documents to editable PowerPoint (PPTX) presentations instantly. 100% private, client-side processing. Your files never leave your device.">
+  <meta property="og:url" content="https://ilovpdf.in/pdf-to-ppt.html">
+  <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+  <meta property="og:site_name" content="iLovPDF">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="PDF to PPT - Convert PDF to PowerPoint Slides Locally | iLovPDF">
+  <meta name="twitter:description"
+    content="Convert PDF documents to editable PowerPoint (PPTX) presentations instantly. 100% private, client-side processing. Your files never leave your device.">
+  <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/common.css">
   <script src="https://cdn.tailwindcss.com"></script>
