--- a/ilove-pdf-dev/text-to-pdf.html
+++ b/ilove-pdf-dev/text-to-pdf.html
@@ -10,6 +10,22 @@
     <meta name="keywords"
         content="text to pdf, create pdf, pdf creator, online pdf maker, text to document, private pdf tools, local pdf generator">
     <link rel="canonical" href="https://ilovpdf.in/text-to-pdf.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Text to PDF - Create PDF from Text Locally | iLovPDF">
+    <meta property="og:description"
+        content="Create professional PDF documents from plain text instantly. 100% private, client-side processing. Customize fonts, layouts, and images without uploading files.">
+    <meta property="og:url" content="https://ilovpdf.in/text-to-pdf.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Text to PDF - Create PDF from Text Locally | iLovPDF">
+    <meta name="twitter:description"
+        content="Create professional PDF documents from plain text instantly. 100% private, client-side processing. Customize fonts, layouts, and images without uploading files.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,7 +44,7 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-slate-900 text-slate-200 antialiased selection:bg-purple-500/30">
