--- a/ilove-pdf-dev/text-to-ppt.html
+++ b/ilove-pdf-dev/text-to-ppt.html
@@ -10,6 +10,22 @@
     <meta name="keywords"
         content="text to ppt, text to powerpoint, ppt creator, online presentation maker, text to slides, private ppt tools, local presentation generator">
     <link rel="canonical" href="https://ilovpdf.in/text-to-ppt.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Text to PPT - Create PowerPoint from Text Locally | iLovPDF">
+    <meta property="og:description"
+        content="Turn your text into professional PowerPoint presentations instantly. 100% private, client-side processing. Choose from multiple themes and layouts without uploading files.">
+    <meta property="og:url" content="https://ilovpdf.in/text-to-ppt.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Text to PPT - Create PowerPoint from Text Locally | iLovPDF">
+    <meta name="twitter:description"
+        content="Turn your text into professional PowerPoint presentations instantly. 100% private, client-side processing. Choose from multiple themes and layouts without uploading files.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,7 +44,7 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-slate-900 text-slate-200 antialiased selection:bg-purple-500/30">
