--- a/ilove-pdf-dev/watermark.html
+++ b/ilove-pdf-dev/watermark.html
@@ -10,6 +10,22 @@
     <meta name="keywords"
         content="image watermark, add watermark, protect images, online watermark, local image editor, private image tools">
     <link rel="canonical" href="https://ilovpdf.in/watermark.html">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Image Watermark - Protect Your Images Online | iLovPDF">
+    <meta property="og:description"
+        content="Add custom watermarks to your images directly in your browser. 100% private, client-side processing. Your files never leave your device.">
+    <meta property="og:url" content="https://ilovpdf.in/watermark.html">
+    <meta property="og:image" content="https://www.ilovpdf.in/og-home.png">
+    <meta property="og:site_name" content="iLovPDF">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Image Watermark - Protect Your Images Online | iLovPDF">
+    <meta name="twitter:description"
+        content="Add custom watermarks to your images directly in your browser. 100% private, client-side processing. Your files never leave your device.">
+    <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,7 +44,7 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-slate-900 text-slate-200 antialiased selection:bg-purple-500/30">
