--- a/ilove-pdf-dev/image-to-pdf.html
+++ b/ilove-pdf-dev/image-to-pdf.html
@@ -28,19 +28,7 @@
     <meta name="twitter:image" content="https://www.ilovpdf.in/og-home.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    },
-                },
-            },
-        }
-    </script>
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
