--- a/ilove-pdf-dev/index.html
+++ b/ilove-pdf-dev/index.html
@@ -174,39 +174,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Fira+Code:wght@400;700&display=swap"
     rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          fontFamily: {
-            sans: ['Inter', 'sans-serif'],
-          },
-          animation: {
-            'pulse-slow': 'pulse 8s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-            'slide-up': 'slideUp 0.4s cubic-bezier(0.16, 1, 0.3, 1)',
-            'gradient-x': 'gradient-x 15s ease infinite',
-            'shimmer-progress': 'shimmerProgress 1.5s infinite ease-in-out',
-          },
-          keyframes: {
-            slideUp: {
-              '0%': { transform: 'translateY(20px)', opacity: '0' },
-              '100%': { transform: 'translateY(0)', opacity: '1' },
-            },
-            'gradient-x': {
-              '0%, 100%': { 'background-size': '200% 200%', 'background-position': 'left center' },
-              '50%': { 'background-size': '200% 200%', 'background-position': 'right center' }
-            },
-            shimmerProgress: {
-              '0%': { transform: 'translateX(-150%) skewX(-20deg)' },
-              '100%': { transform: 'translateX(250%) skewX(-20deg)' }
-            }
-          }
-        },
-      },
-    }
-  </script>
+  <link rel="stylesheet" href="/css/style.css">
 
   <style>
     :root {
